--- a/app/public/wp-content/themes/Mis-recetas-pagina-web/Inicio.html
+++ b/app/public/wp-content/themes/Mis-recetas-pagina-web/Inicio.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <meta name="description" content="Página web sobre mis recetas">
         <meta name="keywords" content="recetas, gastronomía, comer">
-        <link rel="icon" href="/_resources/1.png">
+        <link rel="icon" href="/_resources/gato-personaje-dibujos-animados-icono-gatito_71328-583.jpg">
         <link rel="stylesheet" href="css/style.css">  
         <link rel="stylesheet" href=""> 
         <link rel="preconnect" href="https://fonts.gstatic.com">
